--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -1,8 +1,13 @@
+/*
+* 基础样式
+*/
+
 @import "variable.styl"
 
-body,html
+body, html
   line-height: 1
-  font-family: 'PingFang SC', 'STHeitiSC-Light', 'Helvetica-Light', Arial, Helvetica, sans-serif
+  font-family: 'PingFang SC', 'STHeitiSC-Light', 'Helvetica-Light', arial, sans-serif, 'Droid Sans Fallback'
   user-select: none
   -webkit-tap-highlight-color: transparent
   background: $color-background
+  color: $color-text
