--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -1,11 +1,11 @@
 /*
-* stylus定义变量文件，语义化变量
+* 样式规范变量
 */
 
 // 颜色定义规范
 $color-background = #222
-$olor-background-d = rgba(0, 0, 0, 0.3)
-$color-hightlight-background = #333
+$color-background-d = rgba(0, 0, 0, 0.3)
+$color-highlight-background = #333
 $color-dialog-background = #666
 $color-theme = #ffcd32
 $color-theme-d = rgba(255, 205, 49, 0.5)
@@ -15,10 +15,10 @@ $color-text-d = rgba(255, 255, 255, 0.3)
 $color-text-l = rgba(255, 255, 255, 0.5)
 $color-text-ll = rgba(255, 255, 255, 0.8)
 
-// 字体定义规范
+//字体定义规范
 $font-size-small-s = 10px
 $font-size-small = 12px
-$font-size-middle = 14px
-$font-size-middle-x = 16px
+$font-size-medium = 14px
+$font-size-medium-x = 16px
 $font-size-large = 18px
-$font-size-large-x = 20px
+$font-size-large-x = 22px
