--- a/src/common/stylus/mixin.styl
+++ b/src/common/stylus/mixin.styl
@@ -1,12 +1,8 @@
-/*
- *  一些样式函数
-*/
-
 // 背景图片
 bg-image($url)
-  background-image: url($url + '.png')
+  background-image: url($url + "@2x.png")
   @media (-webkit-min-device-pixel-ratio: 3),(min-device-pixel-ratio: 3)
-    background-image: url($url + '.png')
+    background-image: url($url + "@3x.png")
 
 // 不换行
 no-wrap()
