--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -1,16 +1,19 @@
 // 颜色定义规范
-$color-background = #222
+$color-background = #FFFFFF
 $color-background-d = rgba(0, 0, 0, 0.3)
-$color-highlight-background = #333
+$color-highlight-background = #d93f30
+$color-border-background = #FAFAFA
+$color-icon-background = #B8B8B8
 $color-dialog-background = #666
-$color-theme = #ffcd32
+$color-theme = #222222
 $color-theme-d = rgba(255, 205, 49, 0.5)
 $color-sub-theme = #d93f30
-$color-text = #fff
-$color-text-d = rgba(255, 255, 255, 0.3)
-$color-text-l = rgba(255, 255, 255, 0.5)
+$color-text = #222222
+$color-text-d = #727272
+$color-text-l = #222222
 $color-text-ll = rgba(255, 255, 255, 0.8)
-
+$color-text-t = #E4311B
+$color-text-i = #9B9B9B
 //字体定义规范
 $font-size-small-s = 10px
 $font-size-small = 12px
