--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -14,6 +14,7 @@ $color-text-l = #222222
 $color-text-ll = rgba(255, 255, 255, 0.8)
 $color-text-t = #E4311B
 $color-text-i = #9B9B9B
+$color-text-b = #ffffff
 //字体定义规范
 $font-size-small-s = 10px
 $font-size-small = 12px
