--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -1,6 +1,7 @@
 // 颜色定义规范
 $color-background = #FFFFFF
 $color-background-d = rgba(0, 0, 0, 0.3)
+$color-background-blur = rgb(0, 0, 0)
 $color-highlight-background = #d93f30
 $color-border-background = #FAFAFA
 $color-icon-background = #B8B8B8
